--- a/csv_index.html
+++ b/csv_index.html
@@ -71,6 +71,7 @@
         <tr>
             <th></th>
             <th align="center">GT (voc.)</th>
+            <th align="center">Original Score</th>
             <th align="center">To Alto (+0 pitches)</th>
         </tr>
         </thead>
@@ -78,6 +79,7 @@
         <tr>
             <th scope="row">wav</th>
             <td><audio controls><source src="m4singer/audio/CSV/GTvoc/1.wav" type="audio/wav"></audio></td>
+            <td><audio controls><source src="m4singer/audio/CSV/midi/1.mp3" type="audio/mp3"></audio></td>
             <td><audio controls><source src="m4singer/audio/CSV/plus0/1.wav" type="audio/wav"></audio></td>
         </tr>
     </tbody>
@@ -108,6 +110,7 @@
         <tr>
             <th></th>
             <th align="center">GT (voc.)</th>
+            <th align="center">Original Score</th>
             <th align="center">To Alto (+0 pitches)</th>
         </tr>
         </thead>
@@ -115,6 +118,7 @@
         <tr>
             <th scope="row">wav</th>
             <td><audio controls><source src="m4singer/audio/CSV/GTvoc/2.wav" type="audio/wav"></audio></td>
+            <td><audio controls><source src="m4singer/audio/CSV/midi/2.mp3" type="audio/mp3"></audio></td>
             <td><audio controls><source src="m4singer/audio/CSV/plus0/2.wav" type="audio/wav"></audio></td>
         </tr>
     </tbody>
@@ -147,6 +151,7 @@
         <tr>
             <th></th>
             <th align="center">GT (voc.)</th>
+            <th align="center">Original Score</th>
             <th align="center">To Soprano (+0 pitches)</th>
         </tr>
         </thead>
@@ -154,6 +159,7 @@
         <tr>
             <th scope="row">wav</th>
             <td><audio controls><source src="m4singer/audio/CSV/GTvoc/3.wav" type="audio/wav"></audio></td>
+            <td><audio controls><source src="m4singer/audio/CSV/midi/3.mp3" type="audio/mp3"></audio></td>
             <td><audio controls><source src="m4singer/audio/CSV/plus0/3.wav" type="audio/wav"></audio></td>
         </tr>
     </tbody>
@@ -184,6 +190,7 @@
         <tr>
             <th></th>
             <th align="center">GT (voc.)</th>
+            <th align="center">Original Score</th>
             <th align="center">To Soprano (+0 pitches)</th>
         </tr>
         </thead>
@@ -191,6 +198,7 @@
         <tr>
             <th scope="row">wav</th>
             <td><audio controls><source src="m4singer/audio/CSV/GTvoc/4.wav" type="audio/wav"></audio></td>
+            <td><audio controls><source src="m4singer/audio/CSV/midi/4.mp3" type="audio/mp3"></audio></td>
             <td><audio controls><source src="m4singer/audio/CSV/plus0/4.wav" type="audio/wav"></audio></td>
         </tr>
     </tbody>
@@ -222,6 +230,7 @@
         <tr>
             <th></th>
             <th align="center">GT (voc.)</th>
+            <th align="center">Original Score</th>
             <th align="center">To Tenor (+0 pitches)</th>
         </tr>
         </thead>
@@ -229,6 +238,7 @@
         <tr>
             <th scope="row">wav</th>
             <td><audio controls><source src="m4singer/audio/CSV/GTvoc/5.wav" type="audio/wav"></audio></td>
+            <td><audio controls><source src="m4singer/audio/CSV/midi/5.mp3" type="audio/mp3"></audio></td>
             <td><audio controls><source src="m4singer/audio/CSV/plus0/5.wav" type="audio/wav"></audio></td>
         </tr>
     </tbody>
@@ -259,6 +269,7 @@
         <tr>
             <th></th>
             <th align="center">GT (voc.)</th>
+            <th align="center">Original Score</th>
             <th align="center">To Tenor (+0 pitches)</th>
         </tr>
         </thead>
@@ -266,6 +277,7 @@
         <tr>
             <th scope="row">wav</th>
             <td><audio controls><source src="m4singer/audio/CSV/GTvoc/6.wav" type="audio/wav"></audio></td>
+            <td><audio controls><source src="m4singer/audio/CSV/midi/6.mp3" type="audio/mp3"></audio></td>
             <td><audio controls><source src="m4singer/audio/CSV/plus0/6.wav" type="audio/wav"></audio></td>
         </tr>
     </tbody>
@@ -298,6 +310,7 @@
         <tr>
             <th></th>
             <th align="center">GT (voc.)</th>
+            <th align="center">Original Score</th>
             <th align="center">To Soprano (+0 pitches)</th>
         </tr>
         </thead>
@@ -305,6 +318,7 @@
         <tr>
             <th scope="row">wav</th>
             <td><audio controls><source src="m4singer/audio/CSV/GTvoc/7.wav" type="audio/wav"></audio></td>
+            <td><audio controls><source src="m4singer/audio/CSV/midi/7.mp3" type="audio/mp3"></audio></td>
             <td><audio controls><source src="m4singer/audio/CSV/plus0/7.wav" type="audio/wav"></audio></td>
         </tr>
     </tbody>
@@ -335,6 +349,7 @@
         <tr>
             <th></th>
             <th align="center">GT (voc.)</th>
+            <th align="center">Original Score</th>
             <th align="center">To Soprano (+0 pitches)</th>
         </tr>
         </thead>
@@ -342,6 +357,7 @@
         <tr>
             <th scope="row">wav</th>
             <td><audio controls><source src="m4singer/audio/CSV/GTvoc/8.wav" type="audio/wav"></audio></td>
+            <td><audio controls><source src="m4singer/audio/CSV/midi/8.mp3" type="audio/mp3"></audio></td>
             <td><audio controls><source src="m4singer/audio/CSV/plus0/8.wav" type="audio/wav"></audio></td>
         </tr>
     </tbody>
