--- a/csv_index.html
+++ b/csv_index.html
@@ -70,7 +70,7 @@
         <thead>
         <tr>
             <th></th>
-            <th align="center">GT (voc.)</th>
+            <th align="center">Original Audio (voc.)</th>
             <th align="center">Original Score</th>
             <th align="center">To Alto (+0 pitches)</th>
         </tr>
@@ -109,7 +109,7 @@
         <thead>
         <tr>
             <th></th>
-            <th align="center">GT (voc.)</th>
+            <th align="center">Original Audio (voc.)</th>
             <th align="center">Original Score</th>
             <th align="center">To Alto (+0 pitches)</th>
         </tr>
@@ -150,7 +150,7 @@
         <thead>
         <tr>
             <th></th>
-            <th align="center">GT (voc.)</th>
+            <th align="center">Original Audio (voc.)</th>
             <th align="center">Original Score</th>
             <th align="center">To Soprano (+0 pitches)</th>
         </tr>
@@ -189,7 +189,7 @@
         <thead>
         <tr>
             <th></th>
-            <th align="center">GT (voc.)</th>
+            <th align="center">Original Audio (voc.)</th>
             <th align="center">Original Score</th>
             <th align="center">To Soprano (+0 pitches)</th>
         </tr>
@@ -229,7 +229,7 @@
         <thead>
         <tr>
             <th></th>
-            <th align="center">GT (voc.)</th>
+            <th align="center">Original Audio (voc.)</th>
             <th align="center">Original Score</th>
             <th align="center">To Tenor (+0 pitches)</th>
         </tr>
@@ -268,7 +268,7 @@
         <thead>
         <tr>
             <th></th>
-            <th align="center">GT (voc.)</th>
+            <th align="center">Original Audio (voc.)</th>
             <th align="center">Original Score</th>
             <th align="center">To Tenor (+0 pitches)</th>
         </tr>
@@ -309,7 +309,7 @@
         <thead>
         <tr>
             <th></th>
-            <th align="center">GT (voc.)</th>
+            <th align="center">Original Audio (voc.)</th>
             <th align="center">Original Score</th>
             <th align="center">To Soprano (+0 pitches)</th>
         </tr>
@@ -348,7 +348,7 @@
         <thead>
         <tr>
             <th></th>
-            <th align="center">GT (voc.)</th>
+            <th align="center">Original Audio (voc.)</th>
             <th align="center">Original Score</th>
             <th align="center">To Soprano (+0 pitches)</th>
         </tr>
