--- a/csv_index.html
+++ b/csv_index.html
@@ -311,7 +311,7 @@
             <th></th>
             <th align="center">Original Audio (voc.)</th>
             <th align="center">Original Score</th>
-            <th align="center">To Soprano (+0 pitches)</th>
+            <th align="center">To Bass (+0 pitches)</th>
         </tr>
         </thead>
         <tbody>
@@ -350,7 +350,7 @@
             <th></th>
             <th align="center">Original Audio (voc.)</th>
             <th align="center">Original Score</th>
-            <th align="center">To Soprano (+0 pitches)</th>
+            <th align="center">To Bass (+0 pitches)</th>
         </tr>
         </thead>
         <tbody>
