--- a/svs_index.html
+++ b/svs_index.html
@@ -60,7 +60,7 @@
 
 <p><span style="text-align: left;font-size: 28px;">Introduction:</span><br /></p>
 <li><span style="text-align: left;font-size: 22px;">Score-based singing voice synthesis refers to synthesizing the singing voice from the given lyrics and the musical scores.</span><br /></li>
-<li><span style="text-align: left;font-size: 22px;">We provide several samples for each singing type. Each item contains input conditions (lyrics and musical score), and audio synthesized by three different models.</span><br /></li>
+<li><span style="text-align: left;font-size: 22px;">We provide several samples for each singing type. Each item contains input conditions (lyrics and musical score), and audio synthesized by three different models (FFT-Singer, GAN-Singer and DiffSinger).</span><br /></li>
 <li><span style="text-align: left;font-size: 22px;">In addition, we also mix the singing voice synthesized by DiffSinger and the musical score to get Mixed Sound, which is used to demonstrate the harmony between the synthesized audio and the score.</span><br /></li>
         <br /><br />
 
