--- a/csv_index.html
+++ b/csv_index.html
@@ -61,8 +61,8 @@
 <p><span style="text-align: left;font-size: 28px;">Introduction:</span><br /></p>
 <li><span style="text-align: left;font-size: 22px;">Controllable singing voice enables the prosody modification of existing singing voice based on a given modified musical score.</span><br /></li>
 <li><span style="text-align: left;font-size: 22px;">We provide several samples for each singing type, and each singing type is transformed into other types by changing the conditions of the score.</span><br /></li>
-<li><span style="text-align: left;font-size: 22px;">Each item contains original audio and original score. +x pitches denotes that the original score is increased or decreased by x as the conditional score, which is input into the system together with the original audio, and finally the modified audio is obtained.</span><br /></li>
-<li><span style="text-align: left;font-size: 22px;">In this experiment we use 6 pitches as the transition condition for adjacent types (pitch can be freely modified). At the same time, we provide +0 pitches for each item as a comparison for other transformations.</span><br /></li>
+        <li><span style="text-align: left;font-size: 22px;">Each item contains <i>Original Audio</i>> and <i>Original Score</i>>. <i>+x pitches</i> denotes that the <i>Original Score</i> is increased or decreased by x as the conditional score, which is input into the system together with the <i>Original Audio</i>, and finally the modified audio is obtained.</span><br /></li>
+        <li><span style="text-align: left;font-size: 22px;">In this experiment we use 6 pitches as the transition condition for adjacent types (pitch can be freely modified). At the same time, we provide <i>+0 pitches</i> for each item as a comparison for other transformations.</span><br /></li>
         <br /><br />
 
 
