--- a/csv_index.html
+++ b/csv_index.html
@@ -412,7 +412,7 @@
                   <li>
                       <ruby style="text-align: center;font-size: 24px;">就<rt>jiou</rt></ruby>
                       <ruby style="text-align: center;font-size: 24px;">当<rt>dang</rt></ruby>
-                      <ruby style="text-align: center;font-size: 24px;">最<rt>zui</rt></ruby>
+                      <ruby style="text-align: center;font-size: 24px;">最<rt>zuei</rt></ruby>
                       <ruby style="text-align: center;font-size: 24px;">后<rt>hou</rt></ruby>
                       <ruby style="text-align: center;font-size: 24px;">约<rt>ve</rt></ruby>
                       <ruby style="text-align: center;font-size: 24px;">定<rt>ding</rt></ruby>
