--- a/svs_index.html
+++ b/svs_index.html
@@ -472,7 +472,7 @@
                     <ruby style="text-align: center;font-size: 24px;">去<rt>qv</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">不<rt>bu</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">到<rt>dao</rt></ruby>
-                    <ruby style="text-align: center;font-size: 24px;">对<rt>dui</rt></ruby>
+                    <ruby style="text-align: center;font-size: 24px;">对<rt>duei</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">的<rt>de</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">站<rt>zhan</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">台<rt>tai</rt></ruby>
