--- a/svs_index.html
+++ b/svs_index.html
@@ -78,7 +78,7 @@
             <ruby style="text-align: center;font-size: 24px;">你<rt>ni</rt></ruby>
             <ruby style="text-align: center;font-size: 24px;">自<rt>zi</rt></ruby>
             <ruby style="text-align: center;font-size: 24px;">己<rt>ji</rt></ruby>
-            <ruby style="text-align: center;font-size: 24px;">却<rt>que</rt></ruby>
+            <ruby style="text-align: center;font-size: 24px;">却<rt>qve</rt></ruby>
             <ruby style="text-align: center;font-size: 24px;">不<rt>bu</rt></ruby>
             <ruby style="text-align: center;font-size: 24px;">知<rt>zhi</rt></ruby>
             <ruby style="text-align: center;font-size: 24px;">道<rt>dao</rt></ruby>
@@ -468,7 +468,7 @@
                 <li>
                     <ruby style="text-align: center;font-size: 24px;">辗<rt>zhan</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">转<rt>zhuan</rt></ruby>
-                    <ruby style="text-align: center;font-size: 24px;">却<rt>que</rt></ruby>
+                    <ruby style="text-align: center;font-size: 24px;">却<rt>qve</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">去<rt>qv</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">不<rt>bu</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">到<rt>dao</rt></ruby>
