--- a/csv_index.html
+++ b/csv_index.html
@@ -72,7 +72,7 @@
         <li>
             <ruby style="text-align: center;font-size: 24px;">暖<rt>nuan</rt></ruby>
             <ruby style="text-align: center;font-size: 24px;">暖<rt>nuan</rt></ruby>
-            <ruby style="text-align: center;font-size: 24px;">就<rt>jiu</rt></ruby>
+            <ruby style="text-align: center;font-size: 24px;">就<rt>jiou</rt></ruby>
             <ruby style="text-align: center;font-size: 24px;">在<rt>zai</rt></ruby>
             <ruby style="text-align: center;font-size: 24px;">胸<rt>xiong</rt></ruby>
             <ruby style="text-align: center;font-size: 24px;">膛<rt>tang</rt></ruby>
