--- a/svs_index.html
+++ b/svs_index.html
@@ -274,7 +274,7 @@
                 <li>
                     <ruby style="text-align: center;font-size: 24px;">是<rt>shi</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">谁<rt>shei</rt></ruby>
-                    <ruby style="text-align: center;font-size: 24px;">留<rt>liu</rt></ruby>
+                    <ruby style="text-align: center;font-size: 24px;">留<rt>liou</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">下<rt>xia</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">千<rt>qian</rt></ruby>
                     <ruby style="text-align: center;font-size: 24px;">年<rt>nian</rt></ruby>
