--- a/csv_index.html
+++ b/csv_index.html
@@ -370,7 +370,7 @@
             <ruby style="text-align: center;font-size: 24px;">哭<rt>ku</rt></ruby>
             <ruby style="text-align: center;font-size: 24px;">的<rt>de</rt></ruby>
             <ruby style="text-align: center;font-size: 24px;">声<rt>sheng</rt></ruby>
-            <ruby style="text-align: center;font-size: 24px;">音<rt>yin</rt></ruby>
+            <ruby style="text-align: center;font-size: 24px;">音<rt>in</rt></ruby>
 
         </li>
         <br />
